<resources>
    <string name="app_name">Theia2</string>
    <string name="navigate_label">NAVIGATE</string>
    <string name="contacts_label">CONTACTS</string>
    <string name="settings_label">SETTINGS</string>
    <string name="input_destination">Input Destination</string>
    <string name="how_do_you_want_to_output_instructions">How do you want to output instructions?</string>
    <string name="voice_only">Voice Only</string>
    <string name="voice_text"><![CDATA[Voice & Text]]></string>
    <string name="add_contact">Add Contact</string>
    <string name="dir1">Walk 30 steps forward</string>
    <string name="dir2">Turn left</string>
    <string name="dir3">Walk 50 steps forward</string>
    <string name="dir4">Your destination is on the right</string>
    <string name="next_direction">Next Direction</string>
</resources>
